--- a/app/packages/app/package.json
+++ b/app/packages/app/package.json
@@ -27,6 +27,7 @@
         "framer-motion": "^6.2.8",
         "history": "^5.3.0",
         "html2canvas": "1.0.0-rc.7",
+        "lodash": "^4.17.21",
         "lru-cache": "^6.0.0",
         "numeral": "^2.0.6",
         "path-to-regexp": "^6.2.0",
@@ -52,6 +53,7 @@
     },
     "devDependencies": {
         "@fiftyone/prettier-config": "*",
+        "@types/lodash": "^4.14.182",
         "@types/mime": "^2.0.3",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.3",
