--- a/app/packages/map/package.json
+++ b/app/packages/map/package.json
@@ -16,10 +16,14 @@
         "@fiftyone/components": "*",
         "@fiftyone/plugins": "*",
         "@fiftyone/state": "*",
-        "mapbox-gl": "^2.9.0",
-        "plotly.js-dist": "^2.12.1"
+        "@mapbox/mapbox-gl-draw": "^1.3.0",
+        "mapbox-gl": "^2.9.2",
+        "react-map-gl": "^7.0.18",
+        "use-resize-observer": "^9.0.2"
     },
     "devDependencies": {
+        "@types/mapbox-gl": "^2.7.4",
+        "@types/react-map-gl": "^6.1.3",
         "typescript": "^4.7.4",
         "vite": "^3.0.0",
         "vite-plugin-externals": "^0.5.0"
