--- a/app/packages/map/package.json
+++ b/app/packages/map/package.json
@@ -17,13 +17,17 @@
         "@fiftyone/plugins": "*",
         "@fiftyone/state": "*",
         "@mapbox/mapbox-gl-draw": "^1.3.0",
+        "@turf/boolean-contains": "^6.5.0",
+        "lodash.throttle": "^4.1.1",
         "mapbox-gl": "^2.9.2",
         "react-map-gl": "^7.0.18",
         "use-resize-observer": "^9.0.2"
     },
     "devDependencies": {
         "@types/mapbox-gl": "^2.7.4",
+        "@types/mapbox__mapbox-gl-draw": "^1.2.5",
         "@types/react-map-gl": "^6.1.3",
+        "@types/robust-point-in-polygon": "^1.0.2",
         "typescript": "^4.7.4",
         "vite": "^3.0.0",
         "vite-plugin-externals": "^0.5.0"
