--- a/app/packages/app/package.json
+++ b/app/packages/app/package.json
@@ -9,6 +9,7 @@
         "build": "yarn build-bare && yarn copy-to-python",
         "build-bare": "tsc && vite build",
         "build-desktop": "tsc && vite build --mode desktop",
+        "compile": "relay-compiler",
         "copy-to-python": "rm -rf ../../../fiftyone/server/static && cp -r ./dist ../../../fiftyone/server/static",
         "copy-to-desktop": "rm -rf ../desktop/dist/ && cp -r ./dist ../desktop/dist"
     },
