--- a/app/packages/relay/package.json
+++ b/app/packages/relay/package.json
@@ -10,6 +10,7 @@
   },
   "main": "./src/index.ts",
   "scripts": {
+    "compile": "relay-compiler",
     "dev": "vite"
   },
   "prettier": "@fiftyone/prettier-config",
