map error handling

--- a/app/packages/map/package.json
+++ b/app/packages/map/package.json
@@ -38,6 +38,7 @@
     "packageManager": "yarn@3.2.1",
     "peerDependencies": {
         "@material-ui/icons": "*",
+        "react-error-boundary": "*",
         "recoil": "*"
     }
 }
