--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -61,7 +61,7 @@ jobs:
           pip install -r requirements/dev.txt
           pip install fiftyone-brain fiftyone-db
           pip install pycocotools tensorflow torch torchvision
-          pip install -e .
+          pip install .
       - name: Build docs
         run: |
           ./docs/generate_docs.bash
