--- a/app/packages/teams/package.json
+++ b/app/packages/teams/package.json
@@ -28,16 +28,15 @@
     "devDependencies": {
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.3",
-        "@types/react-relay": "^13.0.0",
+        "@types/react-relay": "^14.1.0",
         "@types/relay-compiler": "^8.0.2",
         "@vitejs/plugin-react": "^1.2.0",
         "react-icons": "^4.3.1",
-        "relay-compiler": "^13.0.2",
-        "relay-compiler-language-typescript": "^15.0.1",
+        "relay-compiler": "^14.1.0",
         "relay-config": "^12.0.1",
         "rollup-plugin-commonjs": "^10.1.0",
-        "typescript": "4.2.4",
-        "vite": "2.4.2",
+        "typescript": "^4.7.4",
+        "vite": "^3.0.0",
         "vite-plugin-relay": "^1.0.7"
     }
 }
